syntax = "proto3";

import "google/protobuf/timestamp.proto";

package contract.v1;

message Events {
    repeated wsteth_Approval wsteth_approvals = 1;
    repeated wsteth_Transfer wsteth_transfers = 2;
}

message Calls {
    repeated wsteth_ApproveCall wsteth_call_approves = 1;
    repeated wsteth_DecreaseAllowanceCall wsteth_call_decrease_allowances = 2;
    repeated wsteth_IncreaseAllowanceCall wsteth_call_increase_allowances = 3;
    repeated wsteth_PermitCall wsteth_call_permits = 4;
    repeated wsteth_TransferCall wsteth_call_transfers = 5;
    repeated wsteth_TransferFromCall wsteth_call_transfer_froms = 6;
    repeated wsteth_UnwrapCall wsteth_call_unwraps = 7;
    repeated wsteth_WrapCall wsteth_call_wraps = 8;
}


message wsteth_Approval {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes owner = 5;
    bytes spender = 6;
    string value = 7;
}

message wsteth_Transfer {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes from = 5;
    bytes to = 6;
    string value = 7;
}

message wsteth_ApproveCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    bytes spender = 6;
    string amount = 7;
    bool output_param0 = 8;
}

message wsteth_DecreaseAllowanceCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    bytes spender = 6;
    string subtracted_value = 7;
    bool output_param0 = 8;
}

message wsteth_IncreaseAllowanceCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    bytes spender = 6;
    string added_value = 7;
    bool output_param0 = 8;
}

message wsteth_PermitCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    bytes owner = 6;
    bytes spender = 7;
    string value = 8;
    string deadline = 9;
    uint64 v = 10;
    bytes r = 11;
    bytes s = 12;
}

message wsteth_TransferCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    bytes recipient = 6;
    string amount = 7;
    bool output_param0 = 8;
}

message wsteth_TransferFromCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    bytes sender = 6;
    bytes recipient = 7;
    string amount = 8;
    bool output_param0 = 9;
}

message wsteth_UnwrapCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string u_wst_eth_amount = 6;
    string output_param0 = 7;
}

message wsteth_WrapCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string u_st_eth_amount = 6;
    string output_param0 = 7;
}
